针对postgresql数据库进行调整