@@ -1,5 +1,6 @@
 package externClassLoader;
 
+import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -7,9 +8,10 @@ import java.net.URLClassLoader;
 public class ExternClassLoader {
 	
 	@SuppressWarnings("resource")
-	public static void getDataBaseDriver(String driverPath,String className) throws MalformedURLException, InstantiationException, IllegalAccessException, ClassNotFoundException{
-		URL url = new URL("file://"+driverPath);
+	public static Class<?> getDataBaseDriver(String driverPath,String className) throws MalformedURLException, InstantiationException, IllegalAccessException, ClassNotFoundException{
+		URL url = new File(driverPath).toURI().toURL();
 		URLClassLoader classLoader = new URLClassLoader(new URL[]{url});
-		classLoader.loadClass(className+".class").newInstance();			//TODO
+		Class<?> clazz = classLoader.loadClass(className);//TODO
+		return clazz;
 	}
 }
